syntax = "proto3";

package com.midel.grpc;

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message Empty {}

message BookRequest {
  string id = 1;
}

message AddBookRequest {
  Book book = 1;
}

message UpdateBookRequest {
  string id = 1;
  Book book = 2;
}

message DeleteBookRequest {
  string id = 1;
}

message BookList {
  repeated Book books = 1;
}

message ErrorResponse {
  string error_name = 1;
}

service BookService {
  rpc GetAllBooks(Empty) returns (BookList);
  rpc GetBookById(BookRequest) returns (Book);
  rpc AddBook(AddBookRequest) returns (BookRequest);
  rpc UpdateBook(UpdateBookRequest) returns (Book);
  rpc DeleteBook(DeleteBookRequest) returns (Empty);
}